Archive2/7b/8adbb804bb330f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:9:9: error: no matching function for call to ‘f(int)’
     f(42);
         ^
main.cpp:9:9: note: candidate is:
main.cpp:4:27: note: template<class T> void f(lol<T>)
 template<typename T> void f(lol<T> arg) {
                           ^
main.cpp:4:27: note:   template argument deduction/substitution failed:
main.cpp:9:9: note:   couldn't deduce template parameter ‘T’
     f(42);
         ^
